<resources>
    <string name="app_name">Talaa</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>

    <string name="menu_home" translatable="false">Home</string>
    <string name="open">Navigation Open</string>
    <string name="close">Navigation Close</string>
    <string name="menu_restaurant_categories" translatable="false">Restaurant Categories</string>
    <string name="menu_places_categories" translatable="false">Places Categories</string>
    <string name="menu_setting" translatable="false">Setting</string>
    <string name="menu_translator" translatable="false">Translator</string>
    <string name="menu_exit" translatable="false">Exit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <!-- Map API Key -->
    <string name="google_maps_key">AIzaSyCKUDuoOG8Sk0YlyOkHHIqvi28sCnkrW0Y</string>
    <string name="places">Places</string>
    <string name="all_places">All Places</string>
    <string name="places_category_list">Places Category List</string>
    <string name="restaurant">Restaurant</string>
    <string name="all_restaurants">All Restaurants</string>
    <string name="what_are_you_looking_for">What are you looking for?</string>
    <string name="show_all">Show All</string>
    <string name="title">Title</string>
    <string name="prize">1000 $</string>
    <string name="custom_action_bar_text">Custom Action Bar Text</string>
    <string name="details">Details</string>
    <string name="location">Location</string>
    <string name="mall">Mall</string>
    <string name="beaches">Beaches</string>
    <string name="culture">Culture</string>
    <string name="family_and_kids">Family And Kids</string>
    <string name="spa_and_wellness">Spa And Wellness</string>
    <string name="activities">Activities</string>
    <string name="water_activities">Water Activities</string>
    <string name="description">Description</string>
    <string name="description_detail">Demo discription
        abcaskdjlaskdjlaksjdoasjdlanfousadasofjsodaiijfaksfoaij
    asifjalfsj</string>
    <string name="social_platforms">Social Platforms</string>
    <string name="nature_and_wild_life">Nature And Wild Life</string>
    <string name="phone_number">+923000830674</string>
    <string name="time">8:00 am </string>
    <string name="faq">FAQ</string>
    <string name="contact_us">Contact Us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_message">Enter Message</string>
    <string name="send">Send</string>
    <string name="faq_question">FAQ Question?</string>
    <string name="faq_answer">FAQ Answer</string>
    <string name="suggested_places">Suggested Places</string>
    <string name="last_visit_location">Last Visit Location</string>
    <string name="city">City</string>
    <string name="cities">Cities</string>
    <string name="total_cities">Total Cities</string>
    <string name="city_places_and_restaurant">City Places And Restaurant</string>
    <string name="city_place_name">City Place Name</string>
    <string name="total_places">Total Places</string>
    <string name="closeing_time">Closeing</string>
    <string name="opening_time">Opening</string>
    <string name="open_time_am">23:40</string>
    <string name="close_time_pm">23:40</string>
    <string name="data_not_found">Data Not Found</string>
    <string name="server_error">Server Error</string>
    <string name="show_more">More</string>
    <string name="total_dine_in_restaurant">Total Dine In Restaurant</string>
    <string name="dine_in_restaurant">Dine In Restaurant</string>
    <string name="total_places_categories">Total Places Categories</string>
    <string name="total_restaurant_categories">Total Restaurant Categories</string>
    <string name="total_items">Total Items</string>
    <string name="empty_data">Fail List is empty</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="or">Or</string>
    <string name="create_account">Create Account</string>
    <string name="category_items">Category Items</string>
    <string name="log_out">Log out</string>
    <string name="restaurant_category_list">Restaurant Category List</string>
    <string name="error_to_get_list">Error to get list </string>
    <string name="enter_place_or_restaurant_name">Enter Place or Restaurant Name</string>
    <string name="enter_city_name">Enter City Name</string>
    <string name="enter_place_or_restaurant_category">Enter Place Or Restaurant Category</string>
    <string name="submit">Submit</string>
    <string name="code">Code</string>
    <string name="verify">Verify</string>
    <string name="check_your_email_for_verification_code">Check your email for verification code</string>
    <string name="enter_last_name">Enter Last Name</string>
</resources>