<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="10">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:padding="10dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="10dp">

                    <ImageView
                        android:id="@+id/cityRestaurantImageView"
                        android:layout_width="match_parent"
                        android:layout_height="108dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/loading"
                        tools:ignore="ContentDescription" />

                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4.3"
                android:orientation="vertical"
                android:weightSum="10">

                <TextView
                    android:id="@+id/cityRestaurantNameTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="2"
                    android:text="@string/places"
                    android:textStyle="bold"
                    tools:ignore="NestedWeights" />

                <TextView
                    android:id="@+id/cityRestaurantLocationTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="2"
                    android:text="@string/location" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="3"
                    android:orientation="horizontal"
                    android:weightSum="10">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="6"
                        android:text="@string/opening_time" />

                    <TextView
                        android:id="@+id/cityRestaurantOpenTimeAmTextView"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="4"
                        android:paddingLeft="10dp"
                        android:text="@string/open_time_am" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginStart="10dp"
                    android:layout_weight="3"
                    android:orientation="horizontal"
                    android:weightSum="10">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="6"
                        android:text="@string/closeing_time" />

                    <TextView
                        android:id="@+id/cityRestaurantOpenTimePmTextView"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="6"
                        android:paddingLeft="10dp"
                        android:text="@string/close_time_pm" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/cityRestaurantPrizeTextView"
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:layout_weight="1.7"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/prize"
                android:textSize="15sp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>